<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="8dp">

    <TextView
        android:id="@+id/labelDate"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/labelDateOfVaccination"
        app:layout_constraintEnd_toStartOf="@id/guidelineValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headingDetail" />

    <TextView
        android:id="@+id/labelDoseNo"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/labelDoseNo"
        app:layout_constraintEnd_toStartOf="@id/guidelineValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierDate" />

    <TextView
        android:id="@+id/labelCountry"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/labelCountry"
        app:layout_constraintEnd_toStartOf="@id/guidelineValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierDose" />

    <TextView
        android:id="@+id/labelAdminCentre"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/labelAdminCentre"
        app:layout_constraintEnd_toStartOf="@id/guidelineValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierCountry" />

    <TextView
        android:id="@+id/labelBatchNo"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/labelBatchNo"
        app:layout_constraintEnd_toStartOf="@id/guidelineValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierAdminCentre" />

    <TextView
        android:id="@+id/labelDueDate"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/labelDueDate"
        app:layout_constraintEnd_toStartOf="@id/guidelineValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierBatchNo"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/valueDate"
        android:textAppearance="?attr/textAppearanceBody2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/labelDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineValue" />

    <TextView
        android:id="@+id/valueDoseNo"
        android:textAppearance="?attr/textAppearanceBody2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/labelDoseNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineValue" />

    <TextView
        android:id="@+id/valueCountry"
        android:textAppearance="?attr/textAppearanceBody2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/labelCountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineValue" />

    <TextView
        android:id="@+id/valueAdminCentre"
        android:textAppearance="?attr/textAppearanceBody2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/labelAdminCentre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineValue" />

    <TextView
        android:id="@+id/valueBatchNo"
        android:textAppearance="?attr/textAppearanceBody2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/labelBatchNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineValue" />

    <TextView
        android:id="@+id/valueDueDate"
        android:textAppearance="?attr/textAppearanceBody2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/labelDueDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineValue" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="8dp"
        app:constraint_referenced_ids="labelDate, valueDate" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierDose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="8dp"
        app:constraint_referenced_ids="labelDoseNo, valueDoseNo" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="8dp"
        app:constraint_referenced_ids="labelCountry, valueCountry" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierAdminCentre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="8dp"
        app:constraint_referenced_ids="labelAdminCentre, valueAdminCentre" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBatchNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="8dp"
        app:constraint_referenced_ids="labelBatchNo, valueBatchNo" />

    <TextView
        android:id="@+id/headingDetail"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headingDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelDueDate"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>